// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-federated-buttons stories renderNothingWithIncorrectAuthState 1`] = `<amplify-federated-buttons></amplify-federated-buttons>`;

exports[`amplify-federated-buttons stories renderNothingWithNoFederatedProp 1`] = `<amplify-federated-buttons></amplify-federated-buttons>`;

exports[`amplify-federated-buttons stories renderWithCorrectAuthState 1`] = `
<amplify-federated-buttons>
  <div>
    <div>
      <amplify-google-button clientid="google_client_id"></amplify-google-button>
    </div>
    <div>
      <amplify-facebook-button appid="facebook_app_id"></amplify-facebook-button>
    </div>
  </div>
</amplify-federated-buttons>
`;

exports[`amplify-federated-buttons stories renderWithCorrectAuthStateAndOnlyFacebookId 1`] = `
<amplify-federated-buttons>
  <div>
    <div>
      <amplify-facebook-button appid="facebook_app_id"></amplify-facebook-button>
    </div>
  </div>
</amplify-federated-buttons>
`;

exports[`amplify-federated-buttons stories renderWithCorrectAuthStateAndOnlyGoogleId 1`] = `
<amplify-federated-buttons>
  <div>
    <div>
      <amplify-google-button clientid="google_client_id"></amplify-google-button>
    </div>
  </div>
</amplify-federated-buttons>
`;
